--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
   <div class="wrap">
     <!-- TEXT LOGO -->
     <div class="masthead">The Transformer Times</div>
-    <div class="mast-sub">a mini‑newspaper of AI games & demos</div>
+    <div class="mast-sub">A mini‑newspaper of AI games & demos</div>
 
     <header>
       <h1>Predict the Prompt! <span class="pill">Kid Mode</span></h1>
